<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\SoftDeletes;
use Illuminate\Database\Eloquent\Model;

class Laboratory extends Model
{
    use HasFactory, SoftDeletes;
    //
    protected $fillable = [
        'name',
        'state',
        'contact'
    ];
    protected $table = 'laboratories';

}
