<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\SoftDeletes;
use Illuminate\Database\Eloquent\Factories\HasFactory;

class Presentation extends Model
{
    use HasFactory, SoftDeletes;

    //
    protected $fillable = [
        'name',
        'description',
    ];

    protected $table = 'presentations';
}
